--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/winout96/AliUAH#readme",
   "description": "",
   "devDependencies": {
+    "@types/chrome": "^0.0.236",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "2.8.7"
